RESOLVED FIXED97892
editing/pasteboard/paste-removing-iframe.html crashes on EFL bots
https://bugs.webkit.org/show_bug.cgi?id=97892
Summary editing/pasteboard/paste-removing-iframe.html crashes on EFL bots
Sudarsana Nagineni (babu)
Reported 2012-09-28 04:40:41 PDT
editing/pasteboard/paste-removing-iframe.html crashes on EFL bots and needs an investigation. crash log for DumpRenderTree (pid 18919): STDOUT: PASS STDERR: 1 0x7f48afd8e723 STDERR: 2 0x7f48a84cccb0 STDERR: 3 0x7f48ac26c081 WebCore::Editor::changeSelectionAfterCommand(WebCore::VisibleSelection const&, unsigned int) STDERR: 4 0x7f48ac2638c8 WebCore::Editor::appliedEditing(WTF::PassRefPtr<WebCore::CompositeEditCommand>) STDERR: 5 0x7f48ac23cc30 WebCore::CompositeEditCommand::apply() STDERR: 6 0x7f48ac23c8cc WebCore::applyCommand(WTF::PassRefPtr<WebCore::CompositeEditCommand>) STDERR: 7 0x7f48ac261ace WebCore::Editor::replaceSelectionWithFragment(WTF::PassRefPtr<WebCore::DocumentFragment>, bool, bool, bool) STDERR: 8 0x7f48ac261d48 WebCore::Editor::replaceSelectionWithText(WTF::String const&, bool, bool) STDERR: 9 0x7f48ac26097f WebCore::Editor::handleTextEvent(WebCore::TextEvent*) STDERR: 10 0x7f48ac631910 WebCore::EventHandler::defaultTextInputEventHandler(WebCore::TextEvent*) STDERR: 11 0x7f48ac1d4054 WebCore::Node::defaultEventHandler(WebCore::Event*) STDERR: 12 0x7f48ac427856 WebCore::TextControlInnerTextElement::defaultEventHandler(WebCore::Event*) STDERR: 13 0x7f48ac19e9d4 WebCore::EventDispatcher::dispatchEventPostProcess(WTF::PassRefPtr<WebCore::Event>, void*) STDERR: 14 0x7f48ac19da9e WebCore::EventDispatcher::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) STDERR: 15 0x7f48ac19bdec WebCore::EventDispatchMediator::dispatchEvent(WebCore::EventDispatcher*) const STDERR: 16 0x7f48ac19caf4 WebCore::EventDispatcher::dispatchEvent(WebCore::Node*, WTF::PassRefPtr<WebCore::EventDispatchMediator>) STDERR: 17 0x7f48ac1d30de WebCore::Node::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) STDERR: 18 0x7f48ac1a7755 WebCore::EventTarget::dispatchEvent(WTF::PassRefPtr<WebCore::Event>, int&) STDERR: 19 0x7f48ac26136a WebCore::Editor::pasteAsPlainText(WTF::String const&, bool) STDERR: 20 0x7f48ac2615aa WebCore::Editor::pasteAsPlainTextWithPasteboard(WebCore::Pasteboard*) STDERR: 21 0x7f48ac264d00 WebCore::Editor::paste() STDERR: 22 0x7f48ac275bfe STDERR: 23 0x7f48ac277a73 WebCore::Editor::Command::execute(WTF::String const&, WebCore::Event*) const STDERR: 24 0x7f48ac12d2fe WebCore::Document::execCommand(WTF::String const&, bool, WTF::String const&) STDERR: 25 0x7f48acd063ed WebCore::jsDocumentPrototypeFunctionExecCommand(JSC::ExecState*) STDERR: 26 0x7f485e0e6265 STDERR: LEAK: 1 JSLazyEventListener STDERR: LEAK: 6 RenderObject STDERR: LEAK: 1 Page STDERR: LEAK: 2 Frame STDERR: LEAK: 1 CachedResource STDERR: LEAK: 1 Range STDERR: LEAK: 75 WebCoreNode
Attachments
Patch (2.99 KB, patch)
2012-09-28 05:20 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-09-28 05:20:54 PDT
WebKit Review Bot
Comment 2 2012-09-28 05:56:41 PDT
Comment on attachment 166221 [details] Patch Clearing flags on attachment: 166221 Committed r129881: <http://trac.webkit.org/changeset/129881>
WebKit Review Bot
Comment 3 2012-09-28 05:56:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.