editing/pasteboard/paste-removing-iframe.html crashes on EFL bots https://bugs.webkit.org/show_bug.cgi?id=97892

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-09-28
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Added missing null check to avoid a crash if the document inside
iframe is removed during the editing operation.

Test: editing/pasteboard/paste-removing-iframe.html

* editing/Editor.cpp:
(WebCore::Editor::changeSelectionAfterCommand):

LayoutTests:

Unskip editing/pasteboard/paste-removing-iframe.html

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/115889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129881 268f45cc-cd09-0410-ab3c-d52691b4dbfc